--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#0099ff</color>
+    <color name="colorPrimary">#9c9ef1</color>
     <color name="primaryDark">#FFFFFFFF</color>
     <color name="Accent">#d81b60</color>
 </resources>
