--- a/app/src/main/res/drawable/round_bg.xml
+++ b/app/src/main/res/drawable/round_bg.xml
@@ -3,4 +3,11 @@
 <solid
     android:color="@color/colorPrimary"/>
     <corners android:radius="100dp"/>
+
+    <padding android:top="10dp"
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+    />
+
 </shape>
